--- a/src/components/layout/styles.styl
+++ b/src/components/layout/styles.styl
@@ -52,7 +52,7 @@ $paddingLeftM = pxToRem(10)
 .copyrightUnderProject
   +mobile()
     position: static
-    margin-top: pxToRem(50)
+    margin-top: pxToRem(30)
 
 .persian
   width: pxToRem(84)
