--- a/src/components/project/styles.styl
+++ b/src/components/project/styles.styl
@@ -13,6 +13,5 @@
     margin-top: pxToRem(120)
     width: 100vw
     max-width: 100vw
-    padding: 0 pxToRem(20) pxToRem(100)
+    padding: 0 pxToRem(20)
     margin-left: pxToRem(-10)
-
